Sat May  6 17:21:59 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* test_parse.c: Include prof_int.h - this program relies on
		internal functions.

Fri May  5 00:02:41 1995  Theodore Y. Ts'o  (tytso@dcl)

	* prof_init.c (profile_get_values): Return PROF_NO_PROFILE if the
		passed-in profile variable is NULL (instead of core dumping).
	
	* prof_err.et (PROF_NO_PROFILE): Defined new error code.

Thu May  4 23:57:56 1995  Theodore Y. Ts'o  (tytso@dcl)

	* prof_tree.c (profile_free_node): Copy child->next to a scratch
		pointer before freeing the node; otherwise we have to
		dereference a freed object.

Fri Apr 28 15:54:40 1995  Theodore Y. Ts'o  <tytso@dcl>

	* prof_parse.c (strip_line): Don't try to strip an empty line.
		This causes memory reference error.

Thu Apr 27 20:26:48 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in (clean-unix): Remove profile.h and test_profile

Thu Apr 27 15:36:27 1995  Mark Eichin  <eichin@cygnus.com>

	* test_parse.c (main): can't make function declarations local to
	functions under SunOS cc. (dump_profile) Also needs to be protected.

Thu Apr 27 10:43:24 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: made to work on the PC.
	* profile.hin, prof_int.h: use _MSDOS instead of _WINDOWS 
	   so we can compile DOS test programs.
	* *.c: Don't need to include file unistd.h.
	* test_*.c: Made to work under DOS--used stubs for the com_err stuff.
	* prof_parse.c: Turned a 2k automatic array into a malloc'ed block
	   because windows dll's shouldn't use up a lot of stack space.

Wed Apr 26 09:54:18 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* profile.hin: Only define PROTOTYPE if it is undefined.

Tue Apr 25 17:28:48 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add AC_CONST for platforms that do not support const.

Mon Apr 24 17:05:27 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (all): Use ARADD to facilitate incremental
	rebuilding of library.

	* configure.in: Add AC_PROG_ARCHIVE_ADD
