@@ -7,6 +7,7 @@ AC_PROG_ARCHIVE
 AC_PROG_ARCHIVE_ADD
 AC_PROG_RANLIB
 ET_RULES
+V5_SHARED_LIB_OBJS
 CopyHeader(profile.h,$(BUILDTOP)/include)
 SubdirLibraryRule([$(OBJS)])
 V5_AC_OUTPUT_MAKEFILE
